--- a/server/.gitignore
+++ b/server/.gitignore
@@ -26,6 +26,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+**/src/main/generated/
+**/src/main/resources/application.yml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
